upgrade to Ionic 6 upgrade ion-date markup to Ionic 6 syntax turn Curriculum in Creator into a dev view for Calvin only

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@ionic-native/sms": "^5.31.1",
     "@ionic-native/speech-recognition": "^5.31.1",
     "@ionic-native/splash-screen": "^5.31.1",
-    "@ionic/angular": "^5.9.3",
+    "@ionic/angular": "^6.6.2",
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "2.2.0",
     "@stripe/stripe-js": "^1.27.0",
@@ -65,7 +65,7 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "^3.0.0",
+    "capacitor-jitsi-meet": "github:calvinckho/capacitor-jitsi-meet-premium#capacitor-4",
     "capacitor-share-extension": "^2.0.0",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
