--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "@angular/service-worker": "^12.2.16",
     "@calvinckho/mic-recorder-to-mp3": "^2.2.4-beta.0",
     "@capacitor-community/electron": "^4.1.0",
-    "@capacitor/android": "^4.0.0",
-    "@capacitor/app": "^4.0.0",
-    "@capacitor/camera": "^4.0.0",
-    "@capacitor/clipboard": "^4.0.0",
-    "@capacitor/core": "^4.0.0",
-    "@capacitor/ios": "^4.0.0",
-    "@capacitor/local-notifications": "^4.0.0",
-    "@capacitor/network": "^4.0.0",
-    "@capacitor/push-notifications": "^4.0.0",
-    "@capacitor/share": "^4.0.0",
-    "@capacitor/splash-screen": "^4.0.0",
-    "@capacitor/status-bar": "^4.0.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/camera": "^5.0.0",
+    "@capacitor/clipboard": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/local-notifications": "^5.0.0",
+    "@capacitor/network": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/share": "^5.0.0",
+    "@capacitor/splash-screen": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic-native/app-version": "^5.31.1",
     "@ionic-native/badge": "^5.31.1",
     "@ionic-native/calendar": "^5.31.1",
@@ -65,8 +65,8 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "github:calvinckho/capacitor-jitsi-meet-premium#capacitor-4",
-    "capacitor-share-extension": "^2.0.0",
+    "capacitor-jitsi-meet": "github:calvinckho/capacitor-jitsi-meet#capacitor-5",
+    "capacitor-share-extension": "github:calvinckho/capacitor-share-extension#capacitor-5",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
     "cordova-plugin-app-version": "^0.1.14",
@@ -114,7 +114,7 @@
     "@angular/compiler": "^12.2.16",
     "@angular/compiler-cli": "^12.2.16",
     "@angular/language-service": "^12.2.16",
-    "@capacitor/cli": "^4.0.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "~3.6.0",
