--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/animations": "^12.2.16",
     "@angular/cdk": "^12.2.13",
     "@angular/common": "^12.2.16",
-    "@angular/core": "^12.2.16",
+    "@angular/core": "^13.4.0",
     "@angular/forms": "^12.2.16",
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
@@ -66,7 +66,7 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "github:calvinckho/capacitor-jitsi-meet#capacitor-5",
+    "capacitor-jitsi-meet": "github:calvinckho/capacitor-jitsi-meet-premium#capacitor-5",
     "capacitor-share-extension": "github:calvinckho/capacitor-share-extension#capacitor-5",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
@@ -111,7 +111,7 @@
     "@angular-devkit/build-angular": "^12.2.17",
     "@angular-devkit/core": "12.2.12",
     "@angular-devkit/schematics": "12.2.12",
-    "@angular/cli": "12.2.12",
+    "@angular/cli": "^13.3.11",
     "@angular/compiler": "^12.2.16",
     "@angular/compiler-cli": "^12.2.16",
     "@angular/language-service": "^12.2.16",
