upgrade to Angular 14

--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "^13.4.0",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "^13.4.0",
-    "@angular/core": "^13.4.0",
-    "@angular/forms": "^13.4.0",
-    "@angular/platform-browser": "^13.4.0",
-    "@angular/platform-browser-dynamic": "^13.4.0",
-    "@angular/router": "^13.4.0",
-    "@angular/service-worker": "^13.4.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "@angular/service-worker": "^14.3.0",
     "@calvinckho/mic-recorder-to-mp3": "^2.2.4-beta.0",
     "@capacitor-community/electron": "^4.1.0",
     "@capacitor/android": "^5.0.0",
@@ -54,7 +54,7 @@
     "@ionic-native/sms": "^5.31.1",
     "@ionic-native/speech-recognition": "^5.31.1",
     "@ionic-native/splash-screen": "^5.31.1",
-    "@ionic/angular": "^6.6.2",
+    "@ionic/angular": "^7.0.10",
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "2.2.0",
     "@stripe/stripe-js": "^1.27.0",
@@ -93,28 +93,29 @@
     "ngx-electron": "^2.2.0",
     "ngx-pinch-zoom": "^2.5.5",
     "ngx-plyr": "^4.0.0",
-    "ngx-quill": "^14.3.0",
+    "ngx-quill": "^19.0.1",
     "ngx-stripe": "^8.2.0",
     "plyr": "3.6.4",
     "quill": "^1.3.7",
-    "rxjs": "^6.6.3",
+    "rxjs": "^7.5.0",
     "scriptjs": "^2.5.9",
     "socket.io-client": "^2.4.0",
     "sw-toolbox": "^3.6.0",
+    "swiper": "^9.3.2",
     "tslib": "^2.0.0",
     "underscore": "^1.13.2",
     "xml2js": "^0.4.23",
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1202.17",
-    "@angular-devkit/build-angular": "^12.2.17",
-    "@angular-devkit/core": "12.2.12",
-    "@angular-devkit/schematics": "12.2.12",
-    "@angular/cli": "^13.3.11",
-    "@angular/compiler": "^13.3.11",
-    "@angular/compiler-cli": "^13.3.11",
-    "@angular/language-service": "^13.3.11",
+    "@angular-devkit/architect": "^0.1402.11",
+    "@angular-devkit/build-angular": "^14.2.11",
+    "@angular-devkit/core": "^14.2.11",
+    "@angular-devkit/schematics": "14.2.11",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler": "^14.3.0",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
     "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/lab": "3.1.2",
@@ -138,7 +139,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.8.4"
   },
   "description": "An Ionic project",
   "cordova": {
