--- a/electron/package.json
+++ b/electron/package.json
@@ -1,38 +1,43 @@
 {
   "name": "Restvo",
-  "version": "1.9.1",
+  "version": "1.10.0",
   "description": "A Learning Platform",
-  "private": true,
-  "main": "./build/index.js",
+  "author": {
+    "name": "Calvin Ho",
+    "email": "calvin@restvo.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/calvinckho/restvo-desktop"
+  },
+  "license": "MIT",
+  "main": "build/src/index.js",
   "scripts": {
-    "build": "tsc",
-    "electron:start": "npm run build && electron ./",
-    "electron:pack": "npm run build && electron-builder build --dir",
-    "electron:build-windows": "npm run build && electron-builder build --windows",
-    "electron:build-mac": "npm run build && electron-builder build --mac",
-    "dist": "npm run build && electron-builder -mw --x64 --ia32",
-    "publish": "npm run build && electron-builder -mw --x64 --ia32 -p always"
+    "build": "tsc && electron-rebuild",
+    "electron:start-live": "node ./live-runner.js",
+    "electron:start": "npm run build && electron --inspect=5858 ./",
+    "electron:pack": "npm run build && electron-builder build --dir -c ./electron-builder.config.json",
+    "electron:make": "npm run build && electron-builder build -c ./electron-builder.config.json -p always"
   },
   "dependencies": {
-    "@capacitor-community/electron-core": "^1.2.3",
-    "ajv": "^6.12.6",
-    "electron-is-dev": "^1.2.0",
-    "electron-log": "^1.3.0",
-    "electron-push-receiver": "^2.1.3",
-    "electron-updater": "^4.3.5",
-    "source-map-support": "^0.5.19"
+    "@capacitor-community/electron": "^4.1.1",
+    "chokidar": "~3.5.3",
+    "electron-is-dev": "~2.0.0",
+    "electron-serve": "~1.1.0",
+    "electron-unhandled": "~4.0.1",
+    "electron-updater": "~5.0.1",
+    "electron-window-state": "~5.0.3"
   },
   "devDependencies": {
-    "electron": "^9.4.3",
-    "electron-builder": "^22.9.1",
-    "typescript": "^3.9.9"
+    "electron": "^19.0.0",
+    "electron-builder": "~22.14.13",
+    "electron-rebuild": "^3.2.7",
+    "typescript": "~4.3.5"
   },
   "keywords": [
     "capacitor",
     "electron"
   ],
-  "author": "Calvin Ho",
-  "license": "MIT",
   "build": {
     "appId": "com.restvo.electron",
     "productName": "Restvo",
