--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/hammerjs": "^2.0.41",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.12.6",
+    "angular-calendar": "^0.31.0",
     "angular-cd-timer": "^1.3.0",
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
@@ -81,6 +82,7 @@
     "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-sms-plugin": "^1.0.2",
     "core-js": "^2.6.12",
+    "date-fns": "^2.30.0",
     "electron-push-receiver": "^2.1.3",
     "es6-promise-plugin": "^4.2.2",
     "fix-orientation-capacitor": "^0.1.1",
